--- a/leverage-edu-home/src/components/Navbar/Navbar.css
+++ b/leverage-edu-home/src/components/Navbar/Navbar.css
@@ -4,6 +4,8 @@
   justify-content: space-between;
   background-color: #050607;
   color: white;
+
+  overflow: hidden;
   padding: 10px;
 }
 
@@ -29,7 +31,7 @@
 
 .navbar-icons {
   display: flex;
-  gap: 10px; 
+  gap: 10px;
 }
 
 .navbar-icons img {
