--- a/leverage-edu-home/src/components/Body/Body.css
+++ b/leverage-edu-home/src/components/Body/Body.css
@@ -1,6 +1,8 @@
 .body-container {
+  overflow: hidden;
   display: flex;
   margin-top: 0px;
+  height: 100vh;
   background: linear-gradient(to right, #050607, #002541);
 }
 
@@ -68,4 +70,9 @@
 
 .right-column {
   width: 65%;
+}
+
+.carousel {
+  width: 500px;
+  height: 500px;
 }
