--- a/leverage-edu-home/src/components/Carousel/Carousel.css
+++ b/leverage-edu-home/src/components/Carousel/Carousel.css
@@ -7,7 +7,8 @@
 
 .slide-image {
   max-width: 100%;
-  height: auto;
+  width: 300px;
+  height: 450px;
 }
 
 .prev-button,
@@ -16,11 +17,13 @@
   top: 50%;
   transform: translateY(-50%);
   padding: 10px;
+  margin: 10px;
   font-size: 20px;
   background-color: transparent;
-  border: none;
   color: #fff;
   cursor: pointer;
+  border: 5px solid gray;
+  border-radius: 500px;
 }
 
 .prev-button {
