--- a/leverage-edu-home/src/components/Body/Body.css
+++ b/leverage-edu-home/src/components/Body/Body.css
@@ -1,9 +1,7 @@
 .body-container {
-  overflow-x: hidden !important;
-  overflow-y: hidden !important;
+  overflow: hidden !important;
   display: flex;
   margin-top: 0px;
-  height: 100vh;
   background: linear-gradient(to right, #050607, #002541);
 }
 
@@ -84,12 +82,6 @@
   position: fixed;
   bottom: 20px;
   right: 20px;
-  opacity: 1;
-  transition: 0.3s ease-in-out;
-}
-
-.whatsapp-logo:hover {
-  opacity: 1;
 }
 
 .whatsapp-logo img {
